--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"</link>
+    <title>PokéSearch</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
